--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         run: docker-compose up -d
 
   Deployment:
-    needs: build
+    needs: Integration
     runs-on: ubuntu-latest
 
     steps:
@@ -82,7 +82,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
           
             #Now we have got the access of EC2 and we will start the deploy .
-            cd /home/ubuntu/CounterApp &&
+            cd /home/ubuntu/catalog-app/ &&
             git checkout master &&
             git fetch --all &&
             git reset --hard origin/master &&
