--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -61,6 +61,8 @@ jobs:
           echo BASE_URL="$BASE_URL" >> .env"
           ls -a
           echo "hello"
+          echo $BASE_URL
+          echo $DB_USER
           cat .env
         shell: bash
       - name: Start containers
