--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -40,26 +40,26 @@ jobs:
           BASE_URL: ${{ secrets.BASE_URL }}
         run: |
           touch .env
-          echo DATABASE_URL="$DATABASE_URL" >> .env"
-          echo PGADMIN_EMAIL="$PGADMIN_EMAIL" >> .env"
-          echo PGADMIN_PASSWORD="$PGADMIN_PASSWORD" >> .env"
-          echo SECRET_KEY="$SECRET_KEY" >> .env"
-          echo ALGORITHM="$ALGORITHM" >> .env"
-          echo TOKEN_URL="$TOKEN_URL" >> .env"
-          echo AWS_ACCESS_KEY="$AWS_ACCESS_KEY" >> .env"
-          echo AWS_SECRET="$AWS_SECRET" >> .env"
-          echo AWS_BUCKET="$AWS_BUCKET" >> .env"
-          echo AWS_REGION="$AWS_REGION" >> .env"
-          echo BACKEND_CORS_ORIGINS="$BACKEND_CORS_ORIGINS" >> .env"
-          echo CELERY_BROKER_URL="$CELERY_BROKER_URL" >> .env"
-          echo CELERY_RESULT_BACKEND="$CELERY_RESULT_BACKEND" >> .env"
-          echo MAIL_USERNAME="$MAIL_USERNAME" >> .env"
-          echo MAIL_PASSWORD="$MAIL_PASSWORD" >> .env"
-          echo MAIL_FROM="$MAIL_FROM" >> .env"
-          echo MAIL_PORT="$MAIL_PORT" >> .env"
-          echo MAIL_SERVER="$MAIL_SERVER" >> .env"
-          echo MAIL_FROM_NAME="$MAIL_FROM_NAME" >> .env"
-          echo BASE_URL="$BASE_URL" >> .env"
+          echo DATABASE_URL="$DATABASE_URL" >> .env
+          echo PGADMIN_EMAIL="$PGADMIN_EMAIL" >> .env
+          echo PGADMIN_PASSWORD="$PGADMIN_PASSWORD" >> .env
+          echo SECRET_KEY="$SECRET_KEY" >> .env
+          echo ALGORITHM="$ALGORITHM" >> .env
+          echo TOKEN_URL="$TOKEN_URL" >> .env
+          echo AWS_ACCESS_KEY="$AWS_ACCESS_KEY" >> .env
+          echo AWS_SECRET="$AWS_SECRET" >> .env
+          echo AWS_BUCKET="$AWS_BUCKET" >> .env
+          echo AWS_REGION="$AWS_REGION" >> .env
+          echo BACKEND_CORS_ORIGINS="$BACKEND_CORS_ORIGINS" >> .env
+          echo CELERY_BROKER_URL="$CELERY_BROKER_URL" >> .env
+          echo CELERY_RESULT_BACKEND="$CELERY_RESULT_BACKEND" >> .env
+          echo MAIL_USERNAME="$MAIL_USERNAME" >> .env
+          echo MAIL_PASSWORD="$MAIL_PASSWORD" >> .env
+          echo MAIL_FROM="$MAIL_FROM" >> .env
+          echo MAIL_PORT="$MAIL_PORT" >> .env
+          echo MAIL_SERVER="$MAIL_SERVER" >> .env
+          echo MAIL_FROM_NAME="$MAIL_FROM_NAME" >> .env
+          echo BASE_URL="$BASE_URL" >> .env
           echo "hello"
           echo "$BASE_URL"
         shell: bash
